--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Vineel</title>
+    <title>Vineel Tummala</title>
 	<link rel="icon" href="favicon.png" type="image/png">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -58,7 +58,7 @@
 								  <span
 								     class="txt-rotate"
 								     data-period="2000"
-								     data-rotate='[ "Web Designer.", "Developer.", "Game Designer." ]'></span>
+								     data-rotate='[ "AI/ML Engineer.", "Large Language Models Developer.", "Game Designer." ]'></span>
 								</h2>
 							</div>
             </div>
@@ -94,8 +94,8 @@
 		            <ul class="about-info mt-4 px-md-0 px-2">
 		            	<li class="d-flex"><span>Name:</span> <span>Vineel Tummala</span></li>
 		            	<!-- <li class="d-flex"><span>Date of birth:</span> <span>September 19, 2000</span></li> -->
-		            	<li class="d-flex"><span>Address:</span> <span>Loveland OH USA</span></li>
-		            	<li class="d-flex"><span>Zip code:</span> <span>45040</span></li>
+		            	<li class="d-flex"><span>Address:</span> <span>Cincinnati OH USA</span></li>
+		            	<li class="d-flex"><span>Zip code:</span> <span>45209</span></li>
 		            	<li class="d-flex"><span>Email:</span> <span>vineelsai3139@gmail.com</span></li>
 		            	<li class="d-flex"><span>Phone: </span> <span>+1-513-708-5854</span></li>
 		            </ul>
@@ -207,11 +207,12 @@
 					    	</div>
 					    	<div class="text pl-3">
 		    					<span class="date">June 2021- July 2021</span>
-		    					<h2>Data Science Intern</h2>
-		    					<span class="position">Phoenix Global Private Limited</span>
-		    					<p>Identified valuable data sources and automated the collection processes and presented information using data visualization techniques.</p>
+		    					<h2>Large Language Model Intern</h2>
+		    					<span class="position">Softeon</span>
+		    					<p>Developed a Retrieval-Augmented Generation (RAG) using Large Language Model (GPT-4 and Ollama), Langchain, ChromaDB, Chainlit. </p>
 		    				</div>
 	    				</div>
+						
 	    				<div class="resume-wrap d-flex ftco-animate">
 	    					<div class="icon d-flex align-items-center justify-content-center">
 					    		<span class="flaticon-ideas"></span>
@@ -229,9 +230,9 @@
 					    	</div>
 					    	<div class="text pl-3">
 		    					<span class="date">2020-2022</span>
-		    					<h2>Head of Social Media Marketing</h2>
-		    					<span class="position">Computer Society of India</span>
-		    					<p>Responsible for increasing page reach by 75% and created promotional videos for events </p>
+		    					<h2>IT Intern</h2>
+		    					<span class="position">Aramark</span>
+		    					<p>Successfully integrated Grubhub services into the campus dining system for Miami University and the University of Cincinnati, enhancing food delivery options and streamlining the ordering process for students and staff.</p>
 		    				</div>
 	    				</div>
 	    				<!-- <div class="resume-wrap d-flex ftco-animate">
@@ -240,7 +241,7 @@
 					    	</div>
 					    	<div class="text pl-3">
 		    					<span class="date">2014-2015</span>
-		    					<h2>Art &amp; Game Designer</h2>
+		    					<h2>Art &amp; Large Language Models Developer</h2>
 		    					<span class="position">Side Tech</span>
 		    					<p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
 		    				</div>
@@ -251,7 +252,7 @@
 					    	</div>
 					    	<div class="text pl-3">
 		    					<span class="date">2014-2015</span>
-		    					<h2>Wordpress Developer</h2>
+		    					<h2>Wordpress AI/ML Engineer</h2>
 		    					<span class="position">Cambridge University</span>
 		    					<p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
 		    				</div>
@@ -262,7 +263,7 @@
 					    	</div>
 					    	<div class="text pl-3">
 		    					<span class="date">2017-2018</span>
-		    					<h2>UI/UX Designer</h2>
+		    					<h2> Developer </h2>
 		    					<span class="position">Cambridge University</span>
 		    					<p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
 		    				</div> -->
@@ -381,8 +382,8 @@
 										<h3>Python</h3>
 										<div class="progress">
 										 	<div class="progress-bar color-2" role="progressbar" aria-valuenow="85"
-										  	aria-valuemin="0" aria-valuemax="100" style="width:85%">
-										    <span>85%</span>
+										  	aria-valuemin="0" aria-valuemax="100" style="width:90%">
+										    <span>90%</span>
 										  	</div>
 										</div>
 									</div>
@@ -703,10 +704,10 @@
 				</div>
 				<div class="text pl-3">
 					<!-- <span class="date">June 2021- July 2021</span> -->
-					<h2>Virtual reality based solution for training medical students</h2>
+					<h2>Penalization Framework for Autonomous Agents Using ASP</h2>
 					<!-- <span class="position">Phoenix Global Private Limited</span> -->
-					<p>Vineel Sai Krishna Tummala, Nallamilli V Sangeeth Reddy, Bandaru Mahesh Gupta, Rohan Kumar Sahukar, and
-						Srinivasa Rao Giduturi. Virtual reality based solution for training medical students.</p>
+					<p>Tummala, Vineel SK. "Penalization Framework For Autonomous Agents Using Answer Set Programming." arXiv preprint
+						arXiv:2309.04487 (2023).p>
 				</div>
 			</div>
           </div>
@@ -798,7 +799,7 @@
           		</div>
           		<div>
 	          		<h3 class="mb-4">Address</h3>
-		            <p>9800 Farmstead Dr, Loveland 45140</p>
+		            <p>3524 Brookstone Dr, Apt A, Cincinnati, Ohio 45209</p>
 		          </div>
 	          </div>
           </div>
@@ -874,7 +875,7 @@
           <div class="col-md">
             <div class="ftco-footer-widget mb-4">
               <h2 class="ftco-heading-2">About</h2>
-              <p>I am eager to leverage my skills and knowledge to pursue a career in software engineering, artificial intelligence, or cybersecurity.</p>
+              <p>I am eager to leverage my skills and knowledge to pursue a career in Large Language Models, Data Science, and AI/ML Oppurtunities.</p>
               <!-- <ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-5">
                 <li class="ftco-animate"><a href="twitter.com"><span class="icon-twitter"></span></a></li>
                 <li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a></li>
@@ -888,7 +889,7 @@
 				<h2 class="ftco-heading-2">Have a Questions?</h2>
 				<div class="block-23 mb-3">
 				  <ul>
-					<li><span class="icon icon-map-marker"></span><span class="text">9800 Farmstead Dr, Loveland , USA, 45140</span></li>
+					<li><span class="icon icon-map-marker"></span><span class="text"> Cincinnati , USA, 45209</span></li>
 					<li><a href="#"><span class="icon icon-phone"></span><span class="text">+1 5137085854</span></a></li>
 					<li><a href="#"><span class="icon icon-envelope"></span><span class="text">vineelsai3139@gmail.com</span></a></li>
 				  </ul>
